Cambios en tarjetas de normas

--- a/indexCSS.css
+++ b/indexCSS.css
@@ -376,62 +376,62 @@ Social Media
 
 .card--1 .card__img,
 .card--1 .card__img--hover {
-    background-image: url('NOM004.jpeg');
+    background-image: url('NOM004.jpg');
 }
 
 .card--2 .card__img,
 .card--2 .card__img--hover {
-    background-image: url('NOM015.jpeg');
+    background-image: url('NOM015.png');
 }
 
 .card--3 .card__img,
 .card--3 .card__img--hover {
-    background-image: url('NOM020.jpeg');
+    background-image: url('NOM020.png');
 }
 
 .card--4 .card__img,
 .card--4 .card__img--hover {
-    background-image: url('NOM024.jpeg');
+    background-image: url('NOM024.jpg');
 }
 
 .card--5 .card__img,
 .card--5 .card__img--hover {
-    background-image: url('NOM050.jpeg');
+    background-image: url('NOM050.png');
 }
 
 .card--6 .card__img,
 .card--6 .card__img--hover {
-    background-image: url('NOM051.jpeg');
+    background-image: url('NOM051.png');
 }
 
 .card--7 .card__img,
 .card--7 .card__img--hover {
-    background-image: url('NOM116.jpeg');
+    background-image: url('NOM116.png');
 }
 
 .card--8 .card__img,
 .card--8 .card__img--hover {
-    background-image: url('NOM141.jpeg');
+    background-image: url('NOM141.png');
 }
 
 .card--9 .card__img,
 .card--9 .card__img--hover {
-    background-image: url('NOM142.jpeg');
+    background-image: url('NOM142.jpg');
 }
 
 .card--10 .card__img,
 .card--10 .card__img--hover {
-    background-image: url('NOM186.jpeg');
+    background-image: url('NOM186.png');
 }
 
 .card--11 .card__img,
 .card--11 .card__img--hover {
-    background-image: url('NOM189.jpeg');
+    background-image: url('NOM189.jpg');
 }
 
 .card--12 .card__img,
 .card--12 .card__img--hover {
-    background-image: url('NOM035.jpeg');
+    background-image: url('NOM035.png');
 }
 
 .card__img {
