Cambios de tarjetas

--- a/servicesCSS.css
+++ b/servicesCSS.css
@@ -370,7 +370,7 @@ div.servicios-inspeccion .container div.txto {
 
 .card--8 .card__img,
 .card--8 .card__img--hover {
-    background-image: url('NOM141.png');
+    background-image: url('NOM141.jpg');
 }
 
 .card--9 .card__img,
