--- a/indexCSS.css
+++ b/indexCSS.css
@@ -409,7 +409,7 @@ Social Media
 
 .card--8 .card__img,
 .card--8 .card__img--hover {
-    background-image: url('NOM141.png');
+    background-image: url('NOM141.jpg');
 }
 
 .card--9 .card__img,
