Imagen de inicio

--- a/indexCSS.css
+++ b/indexCSS.css
@@ -9,7 +9,7 @@ body {
 
 section.demo {
     font-family: 'Courier New', Courier, monospace;
-    background: url(portada7.jpg) no-repeat center;
+    background: url(portada12.jpeg) no-repeat center;
     background-size: cover;
     opacity: 0.9;
     text-align: center;
