--- a/servicesCSS.css
+++ b/servicesCSS.css
@@ -673,7 +673,7 @@ div.servicios-inspeccion .container div.txto {
         transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
         background-color: #fff;
         width: 90%;
-        height: 250px;
+        height: 180px;
         position: relative;
         border-radius: 12px;
         overflow: hidden;
@@ -687,16 +687,15 @@ div.servicios-inspeccion .container div.txto {
         background-color: #fff;
         border-bottom-left-radius: 12px;
         border-bottom-right-radius: 12px;
-        height: 500px;
+        height: 300px;
         width: 200px;
         padding: 1px 100px 0px 3px;
     }
     .card__category {
+        margin-top: 50px;
         font-family: 'Raleway', sans-serif;
-        text-transform: uppercase;
-        font-size: 10px;
-        font-weight: 500;
-        color: #868686;
+        font-size: 5px;
+        color: #2a2a2a;
         width: 150px;
     }
     .card__title {
